# hlsavetool-multiplatform

./: CMakeLists.txt  README.md
headers/: common.h  defines.h  oodle.h
src/: hlsaves.c  oodle.c
